--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "author": "alvian ardhiansyah",
   "license": "MIT",
   "dependencies": {
-    "async": "^3.2.3",
+    "async": "^3.2.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^8.13.0",
+    "firebase-functions": "^3.14.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
-    "sequelize": "^6.20.1",
+    "sequelize": "^6.21.1",
     "socket.io": "^4.5.1",
-    "whatsapp-web.js": "^1.16.6"
+    "whatsapp-web.js": "^1.17.0"
   }
 }
