--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.21.1",
+    "sequelize-oracle": "^3.3.2-0.0",
     "socket.io": "^4.5.1",
     "whatsapp-web.js": "^1.17.0"
   }
