--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "whatsapp api",
   "main": "app.js",
   "scripts": {
+    "dev": "node app.js",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,16 +19,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "firebase": "^8.10.0",
-    "firebase-admin": "^8.13.0",
+    "firebase": "^9.10.0",
+    "firebase-admin": "^11.0.1",
     "firebase-functions": "^3.14.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.21.1",
-    "sequelize-oracle": "^3.3.2-0.0",
+    "@sxanyar/sequelize-oracle": "^3.3.2-0.1",
     "socket.io": "^4.5.1",
-    "whatsapp-web.js": "^1.17.0"
+    "whatsapp-web.js": "^1.17.1"
   }
 }
